Map UI and org link
1. added map UI with search bar
2. added org link to opportunities from volunteer's side
3. assigned unique URL'S to each users.

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -26,7 +26,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a href="#settings">IMPACT</a>
+                <a href="#impact">IMPACT</a>
                 <hr align="center">
             </div>
         </div>
@@ -49,7 +49,7 @@
                         <a href="https://{{ organization.website }}"><input type="text" value="{{ organization.website }}" contenteditable="false"></a>
                         </tr>
                     </div>
-                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' user.pk %}">
                         {% csrf_token %}
                         {{ user_form }}
                         <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
@@ -166,7 +166,7 @@
                         <input type="text" value="{{ volunteer.date_of_birth }}" contenteditable="false">
                         </tr>
                     </div>
-                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' user.pk %}">
                         {% csrf_token %}
                         {{ user_form }}
                         <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
