--- a/voluncheer/templates/voluncheer/map.html
+++ b/voluncheer/templates/voluncheer/map.html
@@ -1,29 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>New York Organizations Map</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/map.css' %}" />
+  </head>
 
-<head>
-  <title>New York Organizations Map</title>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/map.css' %}">
-  <script type="module" src="{% static 'js/map.js' %}"></script>
-</head>
-
-<body>
-  <div class="container">
-    <img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo title" height="80px">
-    <div id="map"></div>
-    <p class="text-center top_spac"> Copyright &copy 2023 VolunCheer, org. All Rights Reserved.</p>
-  </div>
-  {{ organizations|json_script:"organizations" }}
-  <!-- prettier-ignore -->
-  <script>
+  <body>
+    <div class="container">
+      <img
+        src="{% static 'images/voluncheer_logo.png' %}"
+        alt="logo"
+        class="logo title"
+        height="80px"
+      />
+      {% block content %}
+      <form method="get">
+        <h2>
+          Search for an address
+          <span style="font-size: 0.5em">
+            <input
+              id="address"
+              type="text"
+              style="width: 20em; border-color: black;"
+              placeholder="Enter a location"
+            />
+          </span>
+        </h2>
+      </form>
+      <div id="map"></div>
+      <div id="infowindow-content">
+        <span id="place-name" class="title"></span><br />
+        <span id="place-address"></span>
+      </div>
+      {% endblock %}
+      <p class="text-center top_spac">
+        Copyright &copy 2023 VolunCheer, org. All Rights Reserved.
+      </p>
+    </div>
+    {{ organizations|json_script:"organizations" }}
+    <!-- prettier-ignore -->
+    <script>
     (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
       key: "{{ key }}",
       v: "beta",
     });
   </script>
-</body>
 
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback=initMap&v=weekly"
+      defer
+    ></script>
+    <script>
+      function initMap() {
+        const map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 40.76, lng: -73.983 },
+          zoom: 15,
+          mapTypeControl: true,
+        });
+        const input = document.getElementById("address");
+
+        const autocomplete = new google.maps.places.Autocomplete(input);
+        autocomplete.bindTo("bounds", map);
+
+        const infowindow = new google.maps.InfoWindow();
+        const infowindowContent = document.getElementById("infowindow-content");
+
+        infowindow.setContent(infowindowContent);
+
+        const marker = new google.maps.Marker({
+          map,
+          anchorPoint: new google.maps.Point(0, -29),
+        });
+
+        autocomplete.addListener("place_changed", () => {
+          infowindow.close();
+          marker.setVisible(false);
+
+          const place = autocomplete.getPlace();
+
+          if (!place.geometry || !place.geometry.location) {
+            // User entered the name of a Place that was not suggested and
+            // pressed the Enter key, or the Place Details request failed.
+            window.alert(
+              "No details available for input: '" + place.name + "'"
+            );
+            return;
+          }
+
+          // If the place has a geometry, then present it on a map.
+          if (place.geometry.viewport) {
+            map.fitBounds(place.geometry.viewport);
+          } else {
+            map.setCenter(place.geometry.location);
+            map.setZoom(15);
+          }
+
+          marker.setPosition(place.geometry.location);
+          marker.setVisible(true);
+          infowindowContent.children["place-name"].textContent = place.name;
+          infowindowContent.children["place-address"].textContent =
+            place.formatted_address;
+          infowindow.open(map, marker);
+        });
+      }
+    </script>
+  </body>
 </html>
