--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -150,6 +150,11 @@
                     <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
                     {% endif %}
                       <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
+                      {%if user.is_volunteer%}
+                      <p class="vol-position-disciption-h1">
+                        <a href="{%url 'organization_view' opportunity.organization.pk%}">{{ opportunity.organization }}</a>
+                      </p>
+                      {%endif%}
                       <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
                       <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
                       <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
