--- a/voluncheer/templates/sidenav.html
+++ b/voluncheer/templates/sidenav.html
@@ -14,7 +14,7 @@
               <hr align="center">
           </div>
           <div class="url">
-              <a class="not-implemented-yet" href="#">IMPACT</a>
+              <a href="#settings">IMPACT</a>
               <hr align="center">
           </div>
       </div>
