--- a/voluncheer/templates/opportunityboard/postanopportunity.html
+++ b/voluncheer/templates/opportunityboard/postanopportunity.html
@@ -18,7 +18,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a class="not-implemented-yet" href="#">IMPACT</a>
+                <a href="#settings">IMPACT</a>
                 <hr align="center">
             </div>
         </div>
