--- a/voluncheer/templates/profiles/posttogallery.html
+++ b/voluncheer/templates/profiles/posttogallery.html
@@ -24,7 +24,7 @@
 
     <div class="sidenav-url">
         <div class="url">
-            <a href="{% url 'home' %}" class="active" >PROFILE</a>
+            <a href="{% url 'home' %}">PROFILE</a>
             <hr align="center">
         </div>
         <div class="url">
@@ -36,7 +36,7 @@
             <hr align="center">
         </div>
         <div class="url">
-            <a href="{% url 'create_post' %}" >CREATE POST</a>
+            <a href="{% url 'create_post' %}" class="active">CREATE POST</a>
             <hr align="center">
         </div>
     </div>
