--- a/voluncheer/templates/profiles/savedevents.html
+++ b/voluncheer/templates/profiles/savedevents.html
@@ -34,6 +34,10 @@
                 <a href="{% url 'saved_events' %}" class="active">MY VOLUNCHEERS</a>
                 <hr align="center">
             </div>
+            <div class="url">
+                <a href="{% url 'create_post' %}" >CREATE POST</a>
+                <hr align="center">
+            </div>
         </div>
     </div>
     <!-- Main -->
@@ -49,6 +53,11 @@
 					    <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
                         {% endif %}
 					    <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
+                        {%if user.is_volunteer%}
+                        <p class="vol-position-disciption-h3">
+                            Published by: <a href="{%url 'organization_view' opportunity.organization.pk%}">{{ opportunity.organization }}</a>
+                        </p>
+                        {%endif%}
                         <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
                         <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
                         <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
