--- a/voluncheer/templates/registration/signup_form.html
+++ b/voluncheer/templates/registration/signup_form.html
@@ -18,4 +18,14 @@
       </form>
     </div>
   </div>
+  <script>
+    $(function() {
+      var user_auth = "{{user.is_authenticated}}";
+      console.log(user_auth)
+      if (user_auth == "True") {
+        var url= "{% url 'home' %}";
+        window.location = url;
+      }
+    });
+  </script>
 {% endblock %}
