added volunteer link to opportunity cards

--- a/voluncheer/static/css/app.css
+++ b/voluncheer/static/css/app.css
@@ -348,4 +348,13 @@ label[for=photo-clear_id] {
 .sticky-note.green {
     background:rgb(222,255,180);
 }
+
+.org-details {
+    font-size: 20px;
+}
+
+.vol-details {
+    font-size: 20px;
+}
+
 /* End */
