--- a/voluncheer/templates/base.html
+++ b/voluncheer/templates/base.html
@@ -31,11 +31,20 @@
               </h1>
             </div>
             <div class="col-6 text-right">
-              {% if user.is_authenticated %}
-                <p class="pt-3">Logged in as <strong>{{ user.email }}</strong>. <a href="{% url 'logout' %}">Log out</a>.</p>
+              {% if curr_user %}
+                {% if curr_user.is_authenticated %}
+                  <p class="pt-3">Logged in as <strong>{{ curr_user.email }}</strong>. <a href="{% url 'logout' %}">Log out</a>.</p>
+                {% else %}
+                  <a href="{% url 'login' %}" class="btn btn-light" role="button">Log in</a>
+                  <a href="{% url 'signup' %}" class="btn btn-primary" role="button">Sign up</a>
+                {% endif %}
               {% else %}
-                <a href="{% url 'login' %}" class="btn btn-light" role="button">Log in</a>
-                <a href="{% url 'signup' %}" class="btn btn-primary" role="button">Sign up</a>
+                {% if user.is_authenticated %}
+                  <p class="pt-3">Logged in as <strong>{{ user.email }}</strong>. <a href="{% url 'logout' %}">Log out</a>.</p>
+                {% else %}
+                  <a href="{% url 'login' %}" class="btn btn-light" role="button">Log in</a>
+                  <a href="{% url 'signup' %}" class="btn btn-primary" role="button">Sign up</a>
+                {% endif %}
               {% endif %}
             </div>
           </div>
