--- a/voluncheer/templates/volunteer/vol_org_view.html
+++ b/voluncheer/templates/volunteer/vol_org_view.html
@@ -49,19 +49,19 @@
             {% if opportunity.photo %}
             <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px" /></a>
             {% endif %}
-            <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
-            <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
-            <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
-            <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
-            <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
-            <p class="vol-position-disciption-h2">{{ opportunity.description }}</p>
+            <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+            <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
+            <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+            <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
+            <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+            <p class="vol-position-description-h2">{{ opportunity.description }}</p>
             {% if user.is_volunteer %}
-                {% if volunteer not in opportunity.volunteers.all %}
+                {% if volunteer in opportunity.volunteers.all %}
+                <div class="url"><a id="register-opportunity" class="readmore" onclick="toggleButton()">Registered!</a></div>
+                {% else %}
                 <div class="url"><a href="{% url 'signup_volunteer' opportunity.pk %}" id="register-opportunity" class="readmore" onclick="toggleButton()">
                     Register?
                 </a></div>
-                {% else %}
-                <div class="url"><a id="register-opportunity" class="readmore" onclick="toggleButton()">Registered!</a></div>
                 {% endif %}
             {% endif %}
             <hr align="center">
